--- a/craigslistjr_rails/Gemfile
+++ b/craigslistjr_rails/Gemfile
@@ -42,9 +42,15 @@ group :development, :test do
   gem 'web-console', '~> 2.0'
 
   #faker for seed file
-gem 'faker'
+  gem 'faker'
 
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
+
+  gem 'rspec-rails'
+
+  gem 'factory_girl_rails'
+
+  gem 'capybara'
 end
 
