--- a/craigslistjr_rails/Gemfile
+++ b/craigslistjr_rails/Gemfile
@@ -56,5 +56,14 @@ group :development, :test do
   gem 'shoulda-matchers'
 
   gem 'valid_attribute'
+
+  gem 'launchy'
+end
+
+group :development do
+  gem 'meta_request'
+  gem 'binding_of_caller'
+  gem 'better_errors'
+  gem 'quiet_assets'
 end
 
